--- a/index.html
+++ b/index.html
@@ -3,14 +3,18 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title></title>
+  <title>DigitalOcean</title>
+  <link rel="preconnect" href="https://fonts.gstatic.com">
+  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700;900&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css" integrity="sha384-HSMxcRTRxnN+Bdg0JdbxYKrThecOKuH5zCYotlSAcp1+c8xmyTe9GYg1l9a69psu" crossorigin="anonymous">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
+  <!-- header -->
+  <!-- navbar -->
   <nav class="navbar gr-navbar">
-    <div class="container-fluid">
+    <div class="container">
       <div class="navbar-header">
         <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
           <span class="sr-only">Toggle navigation</span>
@@ -63,7 +67,57 @@
           <li><a class="btn signup-btn" href="#">Sign Up</a></li>
         </ul>
       </div>
-    </div><!--/.container-fluid -->
+    </div>
   </nav>
+  <!-- /navbar -->
+
+  <!-- jumbotron section -->
+  <div class="jumbotron-bg">
+    <div class="container">
+      <div class="row">
+        <!-- jumbotron -->
+        <div class="col-xs-12 col-sm-7">
+          <div class="gr-jumbotron">
+            <h1>The simplest cloud platform for developers & teams</h1>
+
+            <p>Deploy, manage, and scale cloud applications faster and more efficiently on DigitalOcean. We make managing infrastructure easy for teams and business, whether you're running one virtual machine or ten thousand.</p>
+          </div>
+        </div>
+        <!-- /jumbotron -->
+
+        <!-- jumbotron form -->
+        <div class="col-xs-12 col-sm-5">
+          <form class="gr-form">
+            <div class="text-center">
+              <h3>Deploy your apps in seconds.</h3>
+
+              <a href="#"><h3>Get started now.</h3></a>
+            </div>
+
+            <div class="form-group">
+              <label class="sr-only" for="InputEmail">Email</label>
+              <input type="email" class="form-control" id="InputEmail" placeholder="Email">
+            </div>
+
+            <div class="form-group">
+              <label class="sr-only" for="InputPassword1">Password</label>
+              <input type="password" class="form-control" id="InputPassword" placeholder="Password">
+            </div>
+
+            <button type="submit" class="btn btn-block gr-btn">Create your account</button>
+
+            <a href="#" class="btn btn-block google-btn">Sign up with goolgle</a>
+
+            <div class="terms-service text-center">
+              By signing up you agree to the <a href="#">Terms of service</a>
+            </div>
+          </form>
+        </div>
+        <!-- /jumbotron form -->
+      </div>
+    </div>
+  </div>
+  <!-- /jumbotron section -->
+  <!-- /header -->
 </body>
 </html>
