--- a/index.html
+++ b/index.html
@@ -119,5 +119,45 @@
   </div>
   <!-- /jumbotron section -->
   <!-- /header -->
+
+  <!-- main -->
+  <main>
+    <!-- customers main -->
+    <div class="customers-main">
+      <div class="container">
+        <div class="row">
+          <h4>innovative business trust digitalocean</h4>
+
+          <div class="customers-img">
+            <img src="img/docker.svg" alt="docker logo">
+          </div>
+
+          <div class="customers-img">
+            <img src="img/gitlab.svg" alt="gitlab logo">
+          </div>
+
+          <div class="customers-img">
+            <img src="img/slack.svg" alt="slack logo">
+          </div>
+
+          <div class="customers-img">
+            <img src="img/hashicorp.svg" alt="hashicorp logo">
+          </div>
+
+          <div class="customers-img">
+            <img src="img/wework.svg" alt="wework logo">
+          </div>
+
+          <div class="customers-img">
+            <img src="img/splunk.svg" alt="splunk logo">
+          </div>
+
+          <a href="#">View customer stories ></a>
+        </div>
+      </div>
+    </div>
+    <!-- /customers main -->
+  </main>
+  <!-- /main -->
 </body>
 </html>
