--- a/index.html
+++ b/index.html
@@ -157,6 +157,74 @@
       </div>
     </div>
     <!-- /customers main -->
+
+    <!-- showing main -->
+    <div class="showing-main">
+      <div class="container">
+        <div class="row">
+          <div class="heading">
+            <h2>Deploy and scale seamlessly</h2>
+
+            <p>
+              Our optimized configuration process saves your team time when running and scaling distributed applications, AI & machine learning workloads, hosted services, client websites, or CI/CD environments.
+            </p>
+          </div>
+
+          <div class="col-xs-12 col-sm-4">
+            <nav>
+              <button>Deploy</button>
+
+              <button>Manage</button>
+
+              <button>Secure</button>
+
+              <button>Scale</button>
+
+              <button>Monitor</button>
+            </nav>
+          </div>
+
+          <div class="col-xs-12 col-sm-8">
+            <div class="container-fluid">
+              <div class="row">
+                <div class="col-xs-12 col-sm-6 showing-boxes">
+                  <img src="img/helm.svg" alt="helm">
+
+                  <h5>Kubernetes in minutes</h5>
+
+                  <p>Spin up a managed Kubernetes cluster in just a few clicks. Simply specify the size and location of your worker nodes.</p>
+                </div>
+
+                <div class="col-xs-12 col-sm-6 showing-boxes">
+                  <img src="img/droplet.svg" alt="droplet">
+
+                  <h5>Optimized compute types</h5>
+
+                  <p>Get the compute resources you need with Standard or Optimized Droplets</p>
+                </div>
+
+                <div class="col-xs-12 col-sm-6 showing-boxes">
+                  <img src="img/click-app-marketplace.svg" alt="cartella pc con +">
+
+                  <h5>One-click apps</h5>
+
+                  <p>Skip the install and configuration process with pre-built open source images supporting Rails, Cassandra, Docker, and more.</p>
+                </div>
+
+                <div class="col-xs-12 col-sm-6 showing-boxes">
+                  <img src="img/rocket.svg" alt="rocket">
+
+                  <h5>App Platform</h5>
+
+                  <p>Build, deploy, and scale apps quickly using a simple, fully managed solution. We’ll handle the infrastructure, app runtimes, and dependencies, so that you can push code to production in just a few clicks.</p>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+    <!-- /showing main -->
   </main>
   <!-- /main -->
 </body>
