--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
   <!-- main -->
   <main>
     <!-- customers main -->
-    <div class="customers-main">
+    <div class="customers-main grey-bg">
       <div class="container">
         <div class="row">
           <h4>innovative business trust digitalocean</h4>
@@ -173,13 +173,9 @@
           <div class="col-xs-12 col-sm-4">
             <nav>
               <button>Deploy</button>
-
               <button>Manage</button>
-
               <button>Secure</button>
-
               <button>Scale</button>
-
               <button>Monitor</button>
             </nav>
           </div>
@@ -225,6 +221,58 @@
       </div>
     </div>
     <!-- /showing main -->
+
+    <!-- first slider -->
+    <div class="first-slider-main grey-bg">
+      <h2>Designed for developers</h2>
+
+      <p>Build more and spend less time managing your infrastructure with our easy-to-use control panel and API.</p>
+
+      <div class="container">
+        <div class="row gm">
+          <div class="col-xs-10 col-xs-offset-1 gm-slider">
+
+            <i class="fa fa-angle-left hidden-xs" aria-hidden="true"></i>
+
+            <div class="slider">
+              <img src="img/droplets.jpg" alt="droplets page">
+
+              <p>Create compute servers in 55 seconds or less.</p>
+            </div>
+
+            <i class="fa fa-angle-right hidden-xs" aria-hidden="true"></i>
+          </div>
+        </div>
+      </div>
+
+      <div class="slider-menu">
+        <button type="button" name="button"></button>
+        <button type="button" name="button"></button>
+        <button type="button" name="button"></button>
+        <button type="button" name="button"></button>
+      </div>
+    </div>
+    <!-- /first slider -->
+
+    <!-- features main -->
+    <div class="features-main">
+      <div class="container">
+        <div class="row">
+          <h2>The features your business needs</h2>
+
+          <div class="col-xs-12 col-sm-4">
+            <img src="img/task-list.svg" alt="task list">
+
+            <h5>Predictable pricing</h5>
+
+            <p>Leave complex pricing structures behind. Always know what you'll pay per month with a flat, industry-leading pricing structure.</p>
+
+            <a href="#">Pricing ></a>
+          </div>
+        </div>
+      </div>
+    </div>
+    <!-- features main -->
   </main>
   <!-- /main -->
 </body>
