--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
     <!-- /customers main -->
 
     <!-- showing main -->
-    <div class="showing-main">
+    <div class="showing-main white-bg">
       <div class="container">
         <div class="row">
           <div class="heading">
@@ -255,7 +255,7 @@
     <!-- /first slider -->
 
     <!-- features main -->
-    <div class="features-main">
+    <div class="features-main white-bg">
       <div class="container">
         <div class="row">
           <h2>The features your business needs</h2>
@@ -269,10 +269,40 @@
 
             <a href="#">Pricing ></a>
           </div>
+
+          <div class="col-xs-12 col-sm-4">
+            <img src="img/headphones.svg" alt="customer service guy with headphones">
+
+            <h5>World-class service</h5>
+
+            <p>Free round-the-clock technical support for all customers. You'll feel the love.</p>
+
+            <a href="#">Support ></a>
+          </div>
+
+          <div class="col-xs-12 col-sm-4">
+            <img src="img/shield.svg" alt="shield">
+
+            <h5>Reliable platform</h5>
+
+            <p>More than 100,000 developer teams worldwide trust DigitalOcean to support their business with a 99.99% uptime SLA for all services.</p>
+
+            <a href="#">Security ></a>
+          </div>
         </div>
       </div>
     </div>
-    <!-- features main -->
+    <!-- /features main -->
+
+    <!-- world regions main -->
+    <div class="world-regions">
+      <div class="container">
+        <div class="row">
+          
+        </div>
+      </div>
+    </div>
+    <!-- /world regions main -->
   </main>
   <!-- /main -->
 </body>
