--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body>
   <!-- header -->
   <!-- navbar -->
-  <nav class="navbar gr-navbar">
+  <nav class="navbar gm-navbar">
     <div class="container">
       <div class="navbar-header">
         <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
@@ -77,7 +77,7 @@
       <div class="row">
         <!-- jumbotron -->
         <div class="col-xs-12 col-sm-7">
-          <div class="gr-jumbotron">
+          <div class="gm-jumbotron">
             <h1>The simplest cloud platform for developers & teams</h1>
 
             <p>Deploy, manage, and scale cloud applications faster and more efficiently on DigitalOcean. We make managing infrastructure easy for teams and business, whether you're running one virtual machine or ten thousand.</p>
@@ -87,7 +87,7 @@
 
         <!-- jumbotron form -->
         <div class="col-xs-12 col-sm-5">
-          <form class="gr-form">
+          <form class="gm-form">
             <div class="text-center">
               <h3>Deploy your apps in seconds.</h3>
 
@@ -104,9 +104,11 @@
               <input type="password" class="form-control" id="InputPassword" placeholder="Password">
             </div>
 
-            <button type="submit" class="btn btn-block gr-btn">Create your account</button>
+            <button type="submit" class="btn btn-block gm-btn">Create your account</button>
 
-            <a href="#" class="btn btn-block google-btn">Sign up with goolgle</a>
+            <a href="#" class="btn btn-block google-btn">
+              <img src="img/google-logo.svg" alt="google logo">Sign up with Google
+            </a>
 
             <div class="terms-service text-center">
               By signing up you agree to the <a href="#">Terms of service</a>
@@ -229,7 +231,7 @@
       <p>Build more and spend less time managing your infrastructure with our easy-to-use control panel and API.</p>
 
       <div class="container">
-        <div class="row gm">
+        <div class="row">
           <div class="col-xs-10 col-xs-offset-1 gm-slider">
 
             <i class="fa fa-angle-left hidden-xs" aria-hidden="true"></i>
@@ -298,11 +300,126 @@
     <div class="world-regions">
       <div class="container">
         <div class="row">
-          
+          <h2>Service your customers around the world from 12 regions.</h2>
+
+          <div class="col-xs-12 col-md-6">
+            <table class="table">
+              <tr>
+                <th>AMS2</th>
+                <td>Amsterdam, Netherlands</td>
+                <td> <a href="#">Test speed ></a> </td>
+              </tr>
+
+              <tr>
+                <th>AMS3</th>
+                <td>Amsterdam, Netherlands</td>
+                <td> <a href="#">Test speed ></a> </td>
+              </tr>
+
+              <tr>
+                <th>BLR1</th>
+                <td>Bangalore, India</td>
+                <td> <a href="#">Test speed ></a> </td>
+              </tr>
+
+              <tr>
+                <th>FRA1</th>
+                <td>Frankfurt, German</td>
+                <td> <a href="#">Test speed ></a> </td>
+              </tr>
+
+              <tr>
+                <th>LON1</th>
+                <td>London, UK</td>
+                <td> <a href="#">Test speed ></a> </td>
+              </tr>
+
+              <tr>
+                <th>NYC1</th>
+                <td>New York, USA</td>
+                <td> <a href="#">Test speed ></a> </td>
+              </tr>
+            </table>
+          </div>
+
+          <div class="col-xs-12 col-md-6">
+            <table class="table">
+              <tr>
+                <th>AMS2</th>
+                <td>Amsterdam, Netherlands</td>
+                <td> <a href="#">Test speed ></a> </td>
+              </tr>
+
+              <tr>
+                <th>AMS3</th>
+                <td>Amsterdam, Netherlands</td>
+                <td> <a href="#">Test speed ></a> </td>
+              </tr>
+
+              <tr>
+                <th>BLR1</th>
+                <td>Bangalore, India</td>
+                <td> <a href="#">Test speed ></a> </td>
+              </tr>
+
+              <tr>
+                <th>FRA1</th>
+                <td>Frankfurt, German</td>
+                <td> <a href="#">Test speed ></a> </td>
+              </tr>
+
+              <tr>
+                <th>LON1</th>
+                <td>London, UK</td>
+                <td> <a href="#">Test speed ></a> </td>
+              </tr>
+
+              <tr>
+                <th>NYC1</th>
+                <td>New York, USA</td>
+                <td> <a href="#">Test speed ></a> </td>
+              </tr>
+            </table>
+          </div>
         </div>
       </div>
     </div>
     <!-- /world regions main -->
+
+    <!-- second slider main -->
+    <div class="second-slider-main grey-bg">
+      <h2>Development teams love DigitalOcean</h2>
+
+      <div class="container">
+        <div class="row">
+          <div class="col-xs-10 col-xs-offset-1 col-sm-8 col-sm-offset-2 gm-slider">
+
+            <i class="fa fa-angle-left hidden-xs" aria-hidden="true"></i>
+
+            <div class="slider">
+              <h2><img src="img/rockerbox.png" alt="rockerbox logo"></h2>
+
+              <p>"We have been able to make scaling technical infrastructure of our business cost effective and efficient."</p>
+
+              <h6>Rick O'Toole</h6>
+
+              <p>Co-foundert and CTO</p>
+
+              <a href="#">Read story ></a>
+            </div>
+
+            <i class="fa fa-angle-right hidden-xs" aria-hidden="true"></i>
+          </div>
+        </div>
+      </div>
+
+      <div class="slider-menu">
+        <button type="button" name="button"></button>
+        <button type="button" name="button"></button>
+        <button type="button" name="button"></button>
+      </div>
+    </div>
+    <!-- /second slider main -->
   </main>
   <!-- /main -->
 </body>
