--- a/index.html
+++ b/index.html
@@ -297,7 +297,7 @@
     <!-- /features main -->
 
     <!-- world regions main -->
-    <div class="world-regions">
+    <div class="world-regions blue-gradient-bg">
       <div class="container">
         <div class="row">
           <h2>Service your customers around the world from 12 regions.</h2>
@@ -397,7 +397,7 @@
             <i class="fa fa-angle-left hidden-xs" aria-hidden="true"></i>
 
             <div class="slider">
-              <h2><img src="img/rockerbox.png" alt="rockerbox logo"></h2>
+              <h2><img src="img/rockerbox.png" alt="rockerbox logo"></h2>          <!--da sistemare-->
 
               <p>"We have been able to make scaling technical infrastructure of our business cost effective and efficient."</p>
 
@@ -422,5 +422,98 @@
     <!-- /second slider main -->
   </main>
   <!-- /main -->
+
+  <!-- footer -->
+  <footer>
+    <div class="top-footer blue-gradient-bg text-center">
+      <h2>Get started now.</h2>
+
+      <a href="#" class="btn signup-btn">Create your account</a>
+    </div>
+
+    <div class="bottom-footer">
+      <div class="container">
+        <div class="row">
+          <div class="col-xs-12 col-md-4">
+            <img src="img/digitalocean-logo-mark.svg" alt="digitalocean logo mark">
+
+            <p class="copyright">&copy; 2018 DigitalOcean, LLC. All rights reserved.</p>
+            <p>Proudly made in NY</p>
+
+            <ul class="list-inline">
+              <li><i class="fa fa-twitter" aria-hidden="true"></i></li>
+              <li><i class="fa fa-facebook-square" aria-hidden="true"></i></li>
+              <li><i class="fa fa-instagram" aria-hidden="true"></i></li>
+              <li><i class="fa fa-youtube-play" aria-hidden="true"></i></li>
+              <li><i class="fa fa-linkedin-square" aria-hidden="true"></i></li>
+            </ul>
+          </div>
+
+          <div class="col-xs-12 col-sm-6 col-md-2">
+            <h5>Company</h5>
+
+            <ul class="list-unstyled">
+              <li><a href="#">About</a></li>
+              <li><a href="#">Leadership</a></li>
+              <li><a href="#">Link</a></li>
+              <li><a href="#">Blog</a></li>
+              <li><a href="#">Careers</a></li>
+              <li><a href="#">Partner Network</a></li>
+              <li><a href="#">Referral Program</a></li>
+              <li><a href="#">Events</a></li>
+              <li><a href="#">Press</a></li>
+              <li><a href="#">Legal & Security</a></li>
+            </ul>
+          </div>
+
+          <div class="col-xs-12 col-sm-6 col-md-2">
+            <h5>Products</h5>
+
+            <ul class="list-unstyled">
+              <li><a href="#">Droplets</a></li>
+              <li><a href="#">Spaces</a></li>
+              <li><a href="#">Kubernetes</a></li>
+              <li><a href="#">Load Balancers</a></li>
+              <li><a href="#">Block Storage</a></li>
+              <li><a href="#">Tools & Integrations</a></li>
+              <li><a href="#">One-click Apps</a></li>
+              <li><a href="#">API</a></li>
+              <li><a href="#">Pricing</a></li>
+              <li><a href="#">Documentation</a></li>
+              <li><a href="#"> Release Notes</a></li>
+            </ul>
+          </div>
+
+          <div class="col-xs-12 col-sm-6 col-md-2">
+            <h5>Community</h5>
+
+            <ul class="list-unstyled">
+              <li><a href="#">Tutorials</a></li>
+              <li><a href="#">Meetups</a></li>
+              <li><a href="#">Q&A</a></li>
+              <li><a href="#">Write for Donations</a></li>
+              <li><a href="#">Droplets for Demos</a></li>
+              <li><a href="#">Hatch</a></li>
+              <li><a href="#">Shop Swag</a></li>
+              <li><a href="#">Research Program</a></li>
+              <li><a href="#">Currents Research</a></li>
+              <li><a href="#">Open Source</a></li>
+            </ul>
+          </div>
+
+          <div class="col-xs-12 col-sm-6 col-md-2">
+            <h5>Support</h5>
+
+            <ul class="list-unstyled">
+              <li><a href="#">Contact Support</a></li>
+              <li><a href="#">FAQ</a></li>
+              <li><a href="#">Network Status</a></li>
+            </ul>
+          </div>
+        </div>
+      </div>
+    </div>
+  </footer>
+  <!-- /footer -->
 </body>
 </html>
