--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
 
             <div class="form-group">
               <label class="sr-only" for="InputPassword1">Password</label>
-              <input type="password" class="form-control" id="InputPassword" placeholder="Password">
+              <input type="password" class="form-control" id="InputPassword1" placeholder="Password">
             </div>
 
             <button type="submit" class="btn btn-block gm-btn">Create your account</button>
@@ -225,35 +225,40 @@
     <!-- /showing main -->
 
     <!-- first slider -->
-    <div class="first-slider-main grey-bg">
+    <div class="first-slider grey-bg">
       <h2>Designed for developers</h2>
 
       <p>Build more and spend less time managing your infrastructure with our easy-to-use control panel and API.</p>
 
       <div class="container">
         <div class="row">
-          <div class="col-xs-10 col-xs-offset-1 gm-slider">
+          <div class="slider-box">
 
-            <i class="fa fa-angle-left hidden-xs" aria-hidden="true"></i>
+            <div class="slider-arrow slider-arrow-left hidden-xs disabled">
+              <i class="fa fa-angle-left" aria-hidden="true"></i>
+            </div>
 
-            <div class="slider">
+            <div class="slider-inner">
               <img src="img/droplets.jpg" alt="droplets page">
 
               <p>Create compute servers in 55 seconds or less.</p>
             </div>
 
-            <i class="fa fa-angle-right hidden-xs" aria-hidden="true"></i>
+            <div class="slider-arrow slider-arrow-right hidden-xs">
+              <i class="fa fa-angle-right" aria-hidden="true"></i>
+            </div>
+
+            <div class="slider-menu">
+              <button type="button" name="button"></button>
+              <button type="button" name="button"></button>
+              <button type="button" name="button"></button>
+              <button type="button" name="button"></button>
+            </div>
           </div>
         </div>
       </div>
-
-      <div class="slider-menu">
-        <button type="button" name="button"></button>
-        <button type="button" name="button"></button>
-        <button type="button" name="button"></button>
-        <button type="button" name="button"></button>
-      </div>
     </div>
+
     <!-- /first slider -->
 
     <!-- features main -->
@@ -387,17 +392,19 @@
     <!-- /world regions main -->
 
     <!-- second slider main -->
-    <div class="second-slider-main grey-bg">
+    <div class="second-slider grey-bg">
       <h2>Development teams love DigitalOcean</h2>
 
       <div class="container">
         <div class="row">
-          <div class="col-xs-10 col-xs-offset-1 col-sm-8 col-sm-offset-2 gm-slider">
+          <div class="col-xs-12 col-sm-8 col-sm-offset-2 slider-box">
 
-            <i class="fa fa-angle-left hidden-xs" aria-hidden="true"></i>
+            <div class="slider-arrow slider-arrow-left hidden-xs disabled">
+              <i class="fa fa-angle-left" aria-hidden="true"></i>
+            </div>
 
-            <div class="slider">
-              <h2><img src="img/rockerbox.png" alt="rockerbox logo"></h2>          <!--da sistemare-->
+            <div class="slider-inner">
+              <h2><img src="img/rockerbox.png" alt="rockerbox logo"></h2>
 
               <p>"We have been able to make scaling technical infrastructure of our business cost effective and efficient."</p>
 
@@ -408,15 +415,17 @@
               <a href="#">Read story ></a>
             </div>
 
-            <i class="fa fa-angle-right hidden-xs" aria-hidden="true"></i>
+            <div class="slider-arrow slider-arrow-right hidden-xs">
+              <i class="fa fa-angle-right" aria-hidden="true"></i>
+            </div>
+
+            <div class="slider-menu">
+              <button type="button" name="button"></button>
+              <button type="button" name="button"></button>
+              <button type="button" name="button"></button>
+            </div>
           </div>
         </div>
-      </div>
-
-      <div class="slider-menu">
-        <button type="button" name="button"></button>
-        <button type="button" name="button"></button>
-        <button type="button" name="button"></button>
       </div>
     </div>
     <!-- /second slider main -->
